# zephyr-boilerplate

./: .gitignore  Dockerfile  README.md
.github/workflows/: build.yml
app/: .checkpatch.conf  .clang-format  .editorconfig  CMakeLists.txt  Kconfig  debug.conf  prj.conf  west.yml
app/boards/arm/app_board/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  app_board.dts  app_board_defconfig  board.cmake  pinmux.c
app/boards/arm/app_board/support/: openocd.cfg
app/src/: CMakeLists.txt  Kconfig  main.c
app/tests/: testcase.yaml
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
